src/objects/Timesheet_Payroll_Entry__c.object
<CustomObject>
    <fields>
        <fullName>DE_Code__c</fullName>
        <label>DE Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Timesheet Payroll Entries</relationshipLabel>
        <relationshipName>Timesheet_Payroll_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Entry_Date__c</fullName>
        <label>Time Entry Date</label>
        <type>Date</type>
    </fields>
    <label>Timesheet Payroll Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee__c</columns>
        <columns>NAME</columns>
        <columns>DE_Code__c</columns>
        <columns>Hours__c</columns>
        <columns>Time_Entry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TPE-{000000}</displayFormat>
        <label>Timesheet Payroll Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Payroll Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>